# shape_matching_task

./: CMakeLists.txt  README.md  Solution.h  main.cpp
